added header to popup

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="leaflet-layer-sealevel-denmark.css" />
 </head>
 <body>
     <div id="map" style="width: 800px; height: 600px"></div>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
+    <script src="bower_components/latlng-format/dist/latlng-format.min.js"></script>
     <script type="text/javascript" src="leaflet-layer-sealevel-denmark.js" charset="UTF-8"></script>
     <script>
         var map = L.map('map').setView([56.2, 11.5], 6);
