--- a/demo/index.html
+++ b/demo/index.html
@@ -9,36 +9,40 @@
 	<meta name='copyright' content='FCOO'>
 	<meta name='owner' content='FCOO'>
 
-  <link  href="bower_components.css" rel="stylesheet">	
-  <link  href="leaflet-control-mouseposition.css" rel="stylesheet">	
-  <link  href="../src/leaflet-layer-sealevel-denmark.css" rel="stylesheet">	
+    <link  href="bower_components.css" rel="stylesheet">
+    <link  href="css/fontawesome-all.css" rel="stylesheet">
+
+  <!-- <link  href="../src/leaflet-layer-sealevel-denmark.css" rel="stylesheet"> -->
 	<style>
 		body {
 			padding: 0;
       margin: 0;
     }
-        
+
     html, body, #map {
-			height: 100%;
+			height: 100%; width: 100%;
      }
 	</style>
 </head>
 
 <body>
-	<div id="map" style="width: 800px; height: 600px"></div>
+	<div id="map"></div>
 
-	
+
 	<script src="bower_components.js"></script>
 	<script src="../src/leaflet-layer-sealevel-denmark.js"></script>
 	<script>
+        i18next.init();
+        i18next.changeLanguage('en');
+
 		$(function() {
         var map = L.map('map', {mousepositionControl:true}).setView([56.2, 11.5], 6);
         L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-					maxZoom: 10,
-          attribution: '&copy; <a href="http://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors</a>'
+            maxZoom: 10,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors</a>'
         }).addTo(map);
 
-				var sealevel = new L.GeoJSON.Sealevel({url: 'sealevel_stations_denmark.json', language: 'en'});
+        var sealevel = new L.GeoJSON.Sealevel({url: 'sealevel_stations_denmark.json'});
         map.addLayer(sealevel);
       });
 
