--- a/demo/index.html
+++ b/demo/index.html
@@ -33,7 +33,7 @@
 	<script src="../src/leaflet-layer-sealevel-denmark.js"></script>
 	<script>
         i18next.init();
-        i18next.changeLanguage('en');
+        i18next.changeLanguage('da');
 
 		$(function() {
         var map = L.map('map', {mousepositionControl:true}).setView([56.2, 11.5], 6);
